--- a/ppo2.ipynb
+++ b/ppo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d674713c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "59a1868c",
    "metadata": {},
    "outputs": [],
@@ -233,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c4fe17e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 初始化环境（Shanten agent 作为对手）\n",
-    "opponents = [RandomAgent() for _ in range(3)]  # 假设我们的 agent 是 player_0，剩下三个是对手\n",
+    "opponents = [ShantenAgent() for _ in range(3)]  # 假设我们的 agent 是 player_0，剩下三个是对手\n",
     "env = GymEnv(opponent_agents=opponents)\n",
     "\n",
     "# 获取 observation shape 和 action space\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "9ef02922",
    "metadata": {},
    "outputs": [],
@@ -284,39 +284,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 100/3000, avg reward: -126.000\n",
-      "Best model saved with reward: -126.000\n",
-      "Episode 200/3000, avg reward: -124.200\n",
-      "Best model saved with reward: -124.200\n",
-      "Episode 300/3000, avg reward: -124.650\n",
-      "Episode 400/3000, avg reward: -124.650\n",
-      "Episode 500/3000, avg reward: -129.150\n",
-      "Episode 600/3000, avg reward: -119.700\n",
-      "Best model saved with reward: -119.700\n",
-      "Episode 700/3000, avg reward: -129.150\n",
-      "Episode 800/3000, avg reward: -128.250\n",
-      "Episode 900/3000, avg reward: -129.600\n",
-      "Episode 1000/3000, avg reward: -126.450\n",
-      "Episode 1100/3000, avg reward: -126.900\n",
-      "Episode 1200/3000, avg reward: -130.950\n",
-      "Episode 1300/3000, avg reward: -127.800\n",
-      "Episode 1400/3000, avg reward: -130.950\n",
-      "Episode 1500/3000, avg reward: -125.550\n",
-      "Episode 1600/3000, avg reward: -131.850\n",
-      "Episode 1700/3000, avg reward: -130.500\n",
-      "Episode 1800/3000, avg reward: -123.750\n",
-      "Episode 1900/3000, avg reward: -128.250\n",
-      "Episode 2000/3000, avg reward: -125.550\n",
-      "Episode 2100/3000, avg reward: -129.600\n",
-      "Episode 2200/3000, avg reward: -127.800\n",
-      "Episode 2300/3000, avg reward: -126.900\n",
-      "Episode 2400/3000, avg reward: -129.600\n",
-      "Episode 2500/3000, avg reward: -126.900\n",
-      "Episode 2600/3000, avg reward: -124.200\n",
-      "Episode 2700/3000, avg reward: -123.750\n",
-      "Episode 2800/3000, avg reward: -129.150\n",
-      "Episode 2900/3000, avg reward: -125.100\n",
-      "Episode 3000/3000, avg reward: -124.200\n"
+      "Episode 100/3000, avg reward: -125.550\n",
+      "Best model saved with reward: -125.550\n",
+      "Episode 200/3000, avg reward: -130.950\n"
      ]
     }
    ],
@@ -358,7 +328,7 @@
     "        # 更新最佳模型\n",
     "        if avg_reward > best_reward:\n",
     "            best_reward = avg_reward\n",
-    "            torch.save(agent.model.state_dict(), \"logs/ppo_random_opponent_model.pt\")\n",
+    "            torch.save(agent.model.state_dict(), \"logs/ppo_shanten_opponent_model.pt\")\n",
     "            print(f\"Best model saved with reward: {best_reward:.3f}\")\n",
     "\n",
     "        log_data = {\n",
@@ -369,11 +339,11 @@
     "            'entropy': stats['entropy'],\n",
     "            'total_loss': stats['total_loss']\n",
     "        }\n",
-    "        with open('logs/ppo_random_opponent_training_log.json', 'a') as f:\n",
+    "        with open('logs/ppo_shanten_opponent_training_log.json', 'a') as f:\n",
     "            json.dump(log_data, f)\n",
     "            f.write('\\n')\n",
-    "        # 绘制训练曲线\n",
-    "        plot_rewards(rolling_rewards, path=f\"logs/ppo_random_opponent_reward_curve_{episode}.png\")\n",
+    "# 绘制训练曲线\n",
+    "plot_rewards(rolling_rewards, path=f\"logs/ppo_shanten_opponent_reward_curve_{episode}.png\")\n",
     "\n",
     "\n"
    ]
