--- a/extract_info.ipynb
+++ b/extract_info.ipynb
@@ -18,42 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3de29740",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  4.91it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "agent = RandomAgent()\n",
-    "env = mjx.MjxEnv()\n",
-    "N = 1\n",
-    "for _ in tqdm(range(N)):\n",
-    "  obs_dict = env.reset()\n",
-    "  while not env.done():\n",
-    "      actions = {player_id: agent.act(obs)\n",
-    "              for player_id, obs in obs_dict.items()}\n",
-    "      obs_dict = env.step(actions)\n",
-    "  returns = env.rewards()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "c1bd2b54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
    "id": "c392a6b3",
    "metadata": {},
    "outputs": [
@@ -92,12 +57,6 @@
     "              for player_id, obs in obs_dict.items()}\n",
     "      obs_dict = env.step(actions)\n",
     "      obs = next(iter(obs_dict.values()))\n",
-    "      # draw_cnt = 0\n",
-    "      # for event in obs.events():\n",
-    "      #     # print(event.type())\n",
-    "      #     if event.type() == mjx.EventType.DRAW:\n",
-    "      #         draw_cnt += 1\n",
-    "      # # print(f\"remain wall: {69-draw_cnt}\")\n",
     "\n",
     "      pid = next(iter(obs_dict.keys()))\n",
     "      if pid == 'player_0':\n",
@@ -111,23 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 160,
    "id": "768ad8f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'player_0': <mjx.observation.Observation at 0x7f7b4c1ecfa0>}"
+       "(dict, mjx.env.MjxEnv)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obs_dict"
+    "type(obs_dict), type(env)"
    ]
   },
   {
