--- a/ppo2.ipynb
+++ b/ppo2.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "047ccfe1",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,41 @@
      "text": [
       "Episode 100/3000, avg reward: -125.550\n",
       "Best model saved with reward: -125.550\n",
-      "Episode 200/3000, avg reward: -130.950\n"
+      "Episode 200/3000, avg reward: -130.950\n",
+      "Episode 300/3000, avg reward: -126.900\n",
+      "Episode 400/3000, avg reward: -123.750\n",
+      "Best model saved with reward: -123.750\n",
+      "Episode 500/3000, avg reward: -122.850\n",
+      "Best model saved with reward: -122.850\n",
+      "Episode 600/3000, avg reward: -128.250\n",
+      "Episode 700/3000, avg reward: -123.300\n",
+      "Episode 800/3000, avg reward: -128.250\n",
+      "Episode 900/3000, avg reward: -122.850\n",
+      "Episode 1000/3000, avg reward: -121.500\n",
+      "Best model saved with reward: -121.500\n",
+      "Episode 1100/3000, avg reward: -123.300\n",
+      "Episode 1200/3000, avg reward: -130.950\n",
+      "Episode 1300/3000, avg reward: -122.850\n",
+      "Episode 1400/3000, avg reward: -132.300\n",
+      "Episode 1500/3000, avg reward: -125.550\n",
+      "Episode 1600/3000, avg reward: -128.250\n",
+      "Episode 1700/3000, avg reward: -126.900\n",
+      "Episode 1800/3000, avg reward: -128.250\n",
+      "Episode 1900/3000, avg reward: -130.950\n",
+      "Episode 2000/3000, avg reward: -131.850\n",
+      "Episode 2100/3000, avg reward: -123.300\n",
+      "Episode 2200/3000, avg reward: -126.900\n",
+      "Episode 2300/3000, avg reward: -121.050\n",
+      "Best model saved with reward: -121.050\n",
+      "Episode 2400/3000, avg reward: -118.800\n",
+      "Best model saved with reward: -118.800\n",
+      "Episode 2500/3000, avg reward: -125.550\n",
+      "Episode 2600/3000, avg reward: -114.750\n",
+      "Best model saved with reward: -114.750\n",
+      "Episode 2700/3000, avg reward: -124.200\n",
+      "Episode 2800/3000, avg reward: -122.400\n",
+      "Episode 2900/3000, avg reward: -126.900\n",
+      "Episode 3000/3000, avg reward: -128.250\n"
      ]
     }
    ],
