--- a/battle copy.ipynb
+++ b/battle copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "7c8f5133",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "98f6804f",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "7b98be1b",
    "metadata": {},
    "outputs": [],
@@ -162,17 +162,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 21.59it/s]"
+      "100%|██████████| 100/100 [00:04<00:00, 20.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 25047.00 ± 1477.05\n",
-      "Average rank: 2.50 ± 1.13\n",
-      "Rank distribution: [0.23 0.32 0.17 0.28]\n",
-      "Score: 63.65\n"
+      "Average score: 25189.00 ± 1553.51\n",
+      "Average rank: 2.46 ± 1.16\n",
+      "Rank distribution: [0.29 0.22 0.23 0.26]\n",
+      "Score: 64.16\n"
      ]
     },
     {
@@ -210,17 +210,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:08<00:00, 12.30it/s]"
+      "100%|██████████| 100/100 [00:08<00:00, 11.24it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 23227.00 ± 11080.22\n",
-      "Average rank: 2.57 ± 1.15\n",
-      "Rank distribution: [0.23 0.28 0.18 0.31]\n",
-      "Score: 49.69\n"
+      "Average score: 25572.00 ± 10378.93\n",
+      "Average rank: 2.44 ± 1.13\n",
+      "Rank distribution: [0.28 0.24 0.24 0.24]\n",
+      "Score: 56.63\n"
      ]
     },
     {
@@ -255,14 +255,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_ppo_agent(pretrained_model, num_games=100):\n",
+    "def test_ppo_agent(pretrained_model, num_games=100, discard_model=False):\n",
     "    my_agent = PPOAgent(\n",
     "        input_dim=544,\n",
     "        hidden_dim=128,\n",
     "        output_dim=181,\n",
     "        pretrained_model=pretrained_model, # If have a pretrained model, load it\n",
     "    )\n",
-    "    env = GymEnv(opponent_agents=[RandomAgent(), RandomAgent(), RandomAgent()], info_type=\"default\")\n",
+    "    env = GymEnv(opponent_agents=[RandomAgent(), RandomAgent(), RandomAgent()], info_type=\"default\", discard_model=discard_model)\n",
     "\n",
     "    records = []\n",
     "    for _ in tqdm(range(num_games)):\n",
@@ -325,7 +325,7 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]/home/lenzlaww/document/SBU/CSE537/finalProject/MahjongAI/discard_tile/discard.py:81: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(path, map_location=DEVICE)['model_state'])\n",
-      "100%|██████████| 100/100 [34:51<00:00, 20.92s/it]\n"
+      "100%|██████████| 100/100 [34:35<00:00, 20.75s/it]\n"
      ]
     }
    ],
@@ -344,10 +344,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 28018.00 ± 3079.88\n",
-      "Average rank: 1.42 ± 0.87\n",
-      "Rank distribution: [0.77 0.11 0.05 0.07]\n",
-      "Score: 86.43\n"
+      "Average score: 28243.00 ± 4588.29\n",
+      "Average rank: 1.49 ± 0.82\n",
+      "Rank distribution: [0.67 0.22 0.06 0.05]\n",
+      "Score: 84.93\n"
      ]
     }
    ],
@@ -392,17 +392,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [42:24<00:00, 25.44s/it]\n"
+      "100%|██████████| 100/100 [33:37<00:00, 20.18s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 26167.00 ± 2350.15\n",
-      "Average rank: 2.03 ± 1.13\n",
-      "Rank distribution: [0.46 0.21 0.17 0.16]\n",
-      "Score: 72.18\n"
+      "Average score: 26253.00 ± 2656.10\n",
+      "Average rank: 1.93 ± 1.05\n",
+      "Rank distribution: [0.47 0.25 0.16 0.12]\n",
+      "Score: 74.48\n"
      ]
     }
    ],
@@ -422,10 +422,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 26167.00 ± 2350.15\n",
-      "Average rank: 2.03 ± 1.13\n",
-      "Rank distribution: [0.46 0.21 0.17 0.16]\n",
-      "Score: 72.18\n"
+      "Average score: 26253.00 ± 2656.10\n",
+      "Average rank: 1.93 ± 1.05\n",
+      "Rank distribution: [0.47 0.25 0.16 0.12]\n",
+      "Score: 74.48\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [33:42<00:00, 20.23s/it]\n"
+      "100%|██████████| 100/100 [28:28<00:00, 17.09s/it]\n"
      ]
     }
    ],
@@ -481,10 +481,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 30808.00 ± 4096.92\n",
-      "Average rank: 1.12 ± 0.45\n",
-      "Rank distribution: [0.92 0.05 0.02 0.01]\n",
-      "Score: 98.84\n"
+      "Average score: 31106.00 ± 4265.51\n",
+      "Average rank: 1.15 ± 0.54\n",
+      "Rank distribution: [0.91 0.05 0.02 0.02]\n",
+      "Score: 97.82\n"
      ]
     }
    ],
@@ -505,10 +505,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 30808.00 ± 4096.92\n",
-      "Average rank: 1.12 ± 0.45\n",
-      "Rank distribution: [0.92 0.05 0.02 0.01]\n",
-      "Score: 98.84\n"
+      "Average score: 31106.00 ± 4265.51\n",
+      "Average rank: 1.15 ± 0.54\n",
+      "Rank distribution: [0.91 0.05 0.02 0.02]\n",
+      "Score: 97.82\n"
      ]
     }
    ],
@@ -542,7 +542,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [33:05<00:00, 19.86s/it]\n"
+      "100%|██████████| 100/100 [31:47<00:00, 19.08s/it]\n"
      ]
     }
    ],
@@ -561,10 +561,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 30584.00 ± 4181.48\n",
-      "Average rank: 1.15 ± 0.50\n",
-      "Rank distribution: [0.9  0.06 0.03 0.01]\n",
-      "Score: 97.52\n"
+      "Average score: 29292.00 ± 3337.35\n",
+      "Average rank: 1.20 ± 0.57\n",
+      "Rank distribution: [0.87 0.07 0.05 0.01]\n",
+      "Score: 94.88\n"
      ]
     }
    ],
@@ -601,13 +601,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [40:11<00:00, 24.12s/it]\n"
+      "100%|██████████| 100/100 [33:12<00:00, 19.92s/it]\n"
      ]
     }
    ],
    "source": [
     "ppo5_model = \"pretrained_models/ppo5_model.pt\"\n",
-    "ppo_agent5_results = test_ppo_agent(ppo5_model, num_games=100)"
+    "ppo_agent5_results = test_ppo_agent(ppo5_model, num_games=100, discard_model=True)"
    ]
   },
   {
@@ -620,17 +620,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score: 28954.00 ± 3104.40\n",
-      "Average rank: 1.36 ± 0.82\n",
-      "Rank distribution: [0.8  0.1  0.04 0.06]\n",
-      "Score: 89.39\n"
+      "Average score: 29659.00 ± 3991.99\n",
+      "Average rank: 1.16 ± 0.50\n",
+      "Rank distribution: [0.88 0.1  0.   0.02]\n",
+      "Score: 95.95\n"
      ]
     }
    ],
    "source": [
     "# store results in a json file\n",
-    "with open(\"logs/battle_results/ppo_agent5_results.json\", \"w\") as f:\n",
-    "    json.dump(ppo_agent5_results, f)\n",
+    "# with open(\"logs/battle_results/ppo_agent5_results.json\", \"w\") as f:\n",
+    "#     json.dump(ppo_agent5_results, f)\n",
     "eval(ppo_agent5_results)"
    ]
   },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0846229e",
    "metadata": {},
    "outputs": [
@@ -709,14 +709,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [36:02<00:00, 21.62s/it]\n"
+      "100%|██████████| 100/100 [39:32<00:00, 23.72s/it]\n"
      ]
     }
    ],
@@ -732,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "177c04c7",
    "metadata": {},
    "outputs": [
@@ -740,99 +733,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ppo1's result evaluation in inter-agent battle:\n",
+      "Average score: 24991.00 ± 1771.73\n",
+      "Average rank: 2.36 ± 1.16\n",
+      "Rank distribution: [0.32 0.24 0.2  0.24]\n",
+      "Score: 65.21\n",
       "ppo2's result evaluation in inter-agent battle:\n",
-      "Average score: 24657.00 ± 1492.73\n",
-      "Average rank: 2.69 ± 1.06\n",
-      "Rank distribution: [0.16 0.29 0.25 0.3 ]\n",
-      "Score: 60.72\n",
+      "Average score: 24939.00 ± 1844.93\n",
+      "Average rank: 2.65 ± 1.06\n",
+      "Rank distribution: [0.18 0.26 0.29 0.27]\n",
+      "Score: 61.62\n",
       "ppo3's result evaluation in inter-agent battle:\n",
-      "Average score: 25074.00 ± 2063.62\n",
-      "Average rank: 2.45 ± 1.08\n",
-      "Rank distribution: [0.25 0.26 0.28 0.21]\n",
-      "Score: 64.72\n",
+      "Average score: 25076.00 ± 2138.56\n",
+      "Average rank: 2.44 ± 1.11\n",
+      "Rank distribution: [0.27 0.24 0.27 0.22]\n",
+      "Score: 64.47\n",
       "ppo4's result evaluation in inter-agent battle:\n",
-      "Average score: 25205.00 ± 1927.30\n",
-      "Average rank: 2.33 ± 1.12\n",
-      "Rank distribution: [0.32 0.23 0.25 0.2 ]\n",
-      "Score: 66.46\n",
-      "ppo5's result evaluation in inter-agent battle:\n",
-      "Average score: 25064.00 ± 1894.76\n",
-      "Average rank: 2.53 ± 1.17\n",
-      "Rank distribution: [0.27 0.22 0.22 0.29]\n",
-      "Score: 62.33\n"
+      "Average score: 24984.00 ± 1668.34\n",
+      "Average rank: 2.55 ± 1.12\n",
+      "Rank distribution: [0.23 0.26 0.24 0.27]\n",
+      "Score: 62.78\n"
      ]
     }
    ],
    "source": [
     "# store results in a json file\n",
     "for i, result in enumerate([ppo1_result, ppo2_result, ppo3_result, ppo4_result]):\n",
-    "    with open(f\"logs/battle_results/ppo{i+1}_vs_ppo{i+2}_results.json\", \"w\") as f:\n",
+    "    with open(f\"logs/battle_results/ppo{i+1}_inter_battle_results.json\", \"w\") as f:\n",
     "        json.dump(result, f)\n",
     "    print(f\"ppo{i+1}'s result evaluation in inter-agent battle:\")\n",
     "    eval(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "9a2bcbb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained model from pretrained_models/ppo5_model.pt\n",
-      "Loaded pretrained model from pretrained_models/ppo3_model.pt\n",
-      "Loaded pretrained model from pretrained_models/ppo3_model.pt\n",
-      "Loaded pretrained model from pretrained_models/ppo3_model.pt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [36:39<00:00, 22.00s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ppo3_model = \"pretrained_models/ppo3_model.pt\"\n",
-    "ppo5_model = \"pretrained_models/ppo5_model.pt\"\n",
-    "\n",
-    "game_players = [ppo5_model, ppo3_model, ppo3_model, ppo3_model]\n",
-    "ppo5_result, _, _, _ = run_game_between_ppo_agents(game_players, num_games=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "42ff196e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average score: 24591.00 ± 4442.77\n",
-      "Average rank: 2.57 ± 1.10\n",
-      "Rank distribution: [0.23 0.22 0.3  0.25]\n",
-      "Score: 59.40\n"
-     ]
-    }
-   ],
-   "source": [
-    "# store results in a json file\n",
-    "with open(\"logs/battle_results/ppo5_vs_ppo3_results.json\", \"w\") as f:\n",
-    "    json.dump(ppo5_result, f)\n",
-    "eval(ppo5_result)"
    ]
   }
  ],
