re-plot whole training reward curve for ppo4

--- a/ppo4.ipynb
+++ b/ppo4.ipynb
@@ -337,12 +337,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "d782250b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_rewards(all_logs[\"all_rewards\"], path=\"logs/ppo4/whole_reward_curve.png\")"
+    "logs = []\n",
+    "for i in range(1, 5):\n",
+    "    with open(f\"logs/ppo4/stage_{i}_logs.json\", \"r\") as f:\n",
+    "        for line in f:\n",
+    "            logs.append(json.loads(line))\n",
+    "if logs:\n",
+    "    all_logs = {\n",
+    "        \"all_rewards\": [],\n",
+    "    }\n",
+    "    for log in logs:\n",
+    "        all_logs[\"all_rewards\"].append(log[\"avg_reward\"])\n",
+    "        \n",
+    "    plot_rewards(all_logs[\"all_rewards\"], path=\"logs/ppo4/whole_reward_curve.png\")\n",
+    "else:\n",
+    "    print(\"No logs found to process.\")"
    ]
   }
  ],
